CSPACE-5162: fixed up floating issues for repeating groups across Chrome and FF. A few things were accomplished: removed a few remaining remnants of fl-force-left in reatable input elements. This was causing problems where elements weren't cleared and necessitated a 'clearfix' solution; added 'white-space:no-wrap' to all <ul> parent elements (added 'white-space:wrap' to <li>) as a way to avoid spacing issues when the list-items repeat; added 'display:inline-block' to repeatable elements as a way to assert block level positioning but in an inline manner. This allows block-type input elements to display inline without needing a float property; misc. tweaks

--- a/src/main/webapp/defaults/css/cspace.css
+++ b/src/main/webapp/defaults/css/cspace.css
@@ -34,7 +34,9 @@ fieldset, table, pre {
 p {
     margin-bottom:1em;}
 ul {
-    margin:0; width:auto;}
+    margin:0; white-space: nowrap;}
+li {
+	white-space: wrap;}
 textarea {
     overflow:auto; 
     resize:none;}
@@ -1087,7 +1089,8 @@ table.cs-admin-table td.checkbox {
     width: 120px !important;}
 .input-date {
     width: 142px !important;
-	border-right:none;}
+	border-right:none;
+	vertical-align:top;}
 .input-money-amount {
     width: 120px !important;}
 .content select {
@@ -1263,7 +1266,7 @@ input[disabled]:hover, input[disabled]:hover    {
 
 .clearfix .cs-repeatable-content,
 .info-column .cs-repeatable-content {
-    float: left;
+    /*float: left;*/
 }
 	
 .ui-tabs .ui-tabs-hide {
@@ -1306,7 +1309,7 @@ input[disabled]:hover, input[disabled]:hover    {
 
 /*   styling the date pickers   */
 .cs-date-picker {
-    margin-top: 21px;}
+    /*margin-top: 21px;*/}
 .cs-calendar-image {
     background: url('../images/cal.png') no-repeat center center;
 }
@@ -1568,6 +1571,7 @@ a.cs-searchBox-advancedSearch, a.cs-listView-header-link {
     height:19px;
     width: 18px;
 	cursor:pointer;
+	display:inline-block;
     /*float:left;*/}
 table .cs-calendar-button { 
     border:none;}
@@ -2185,5 +2189,6 @@ li.cs-locked {
     float: none;
 }
 li.cs-repeatable-repeat .cs-termList {
-    float: left;
+    /*float: left;*/
+	display:inline-block;
 }
